...
                                <color key="backgroundColor" red="0.2784313725" green="0.58039215690000001" blue="0.37254901959999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="13E-qC-PX0"/>
                                    <constraint firstAttribute="width" constant="70" id="gM9-A2-HlQ"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                <state key="normal" title="Add">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                        <real key="value" value="4"/>
                                    </userDefinedRuntimeAttribute>
...
                                <rect key="frame" x="16" y="493" width="343" height="45"/>
                                <color key="backgroundColor" red="0.2784313725" green="0.58039215690000001" blue="0.37254901959999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="45" id="F0m-aE-Mo6"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                <state key="normal" title="Search for recipe">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                        <real key="value" value="4"/>
                                    </userDefinedRuntimeAttribute>
...
                                    </userDefinedRuntimeAttribute>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <action selector="goToResultPage:" destination="zga-jB-KdU" eventType="touchUpInside" id="lTa-ML-cYC"/>
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="eggs, cheese, ham..." minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="opA-hH-dpf" customClass="SearchTextField" customModule="SearchTextField">
                                <rect key="frame" x="16" y="51" width="265" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="JAI-EM-jlv"/>
                                </constraints>
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                        <viewLayoutGuide key="safeArea" id="W3R-fS-fKh"/>
                        <connections>
                            <outletCollection property="gestureRecognizers" destination="5Bg-BQ-yIk" appends="YES" id="DrI-5s-uxs"/>
                        </connections>
                    </view>
                    <navigationItem key="navigationItem" title="Reciplease" id="Gdo-rj-jDs">
                        <barButtonItem key="backBarButtonItem" title="Search" id="W5a-XW-SCn"/>
                    </navigationItem>
                    <connections>
                        <outlet property="newIngredient" destination="opA-hH-dpf" id="I5x-uK-qvn"/>
                        <outlet property="searchTable" destination="ewh-W5-VrH" id="yoB-a4-yR5"/>
                    </connections>
                </viewController>
...
