...
    ///   - completion: return which button is pushed
    func showMessageWith(_ title: String, _ message: String, _ viewController: UIViewController, _ typeButton: PopUpType, completion: @escaping (PopUpChoice) -> ()) {
        let alertVC = UIAlertController(title: title, message: message, preferredStyle: .alert)
        alertVC.view.tintColor = #colorLiteral(red: 0.2784313725, green: 0.5803921569, blue: 0.3725490196, alpha: 1)
        
        if typeButton == .OkButton {
            alertVC.addAction(UIAlertAction(title: "Ok", style: .default){ _ in
                completion(.OkPushed)
            })
        } else {
            alertVC.addAction(UIAlertAction(title: "Réessayer", style: .default){ _ in
                completion(.RetryPushed)
            })
...
