...
        getContent()
    }
    
    /// Register all xib of the table view
    func setupContent() {
        tableView.tableFooterView = UIView()
        tableView.accessibilityIdentifier = "favoriteTable"
        tableView.register(UINib(nibName: "ResultRecipeCell", bundle: nil), forCellReuseIdentifier: "ResultRecipeCell")
        tableView.register(UINib(nibName: "NoFavoriteCell", bundle: nil), forCellReuseIdentifier: "NoFavoriteCell")
    }
    
    /// Load data from the core data and setup the table view
    func getContent() {
...
