...
                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AFB-9k-phg">
                        <rect key="frame" x="64" y="-0.5" width="192" height="80.5"/>
                        <color key="backgroundColor" red="0.71767544750000001" green="0.84264773130000004" blue="0.89722675090000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstAttribute="height" constant="80" id="btj-r7-NKr"/>
                        </constraints>
                        <state key="normal" title="Show website">
                            <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                        </state>
                    </button>
                </subviews>
                <constraints>
                    <constraint firstItem="AFB-9k-phg" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" multiplier="0.6" id="ERf-0s-yBz"/>
...
