...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="XJl-bY-EaJ" id="XFs-q9-A4x"/>
                            <outlet property="delegate" destination="XJl-bY-EaJ" id="OHE-Y2-08s"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Recipe detail" id="yNW-Xj-Ivb">
                        <barButtonItem key="backBarButtonItem" title="Back" id="SEW-9f-bk8"/>
                    </navigationItem>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="XSd-q9-ryQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="4356" y="-475.41229385307349"/>
...
